TinyMCE 4.0.16 - bug fix for video and alignment issue - final stable version + padding slide title

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -350,8 +350,8 @@ body {
   .padding24{
     padding: 24px 0;
   }
-  .padding34{
-    padding: 24px 0 34px 0;
+  .padding78{
+    padding: 24px 0 78px 0;
   }
   .padding24Bottom{
    padding: 0 0 24px 0;
